update relationship between OrderDetails and OrderItem